[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game/Scripts/SinglePlayerManager.gd" type="Script" id=1]
[ext_resource path="res://Menus/Scenes/SinglePlayerPause.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game/Music/Juno Reactor - Pistolero.mp3" type="AudioStream" id=4]

[node name="SinglePlayerManager" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="PauseMenu" parent="." instance=ExtResource( 3 )]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="EndTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 4 )
bus = "Music"

[node name="SFX" type="AudioStreamPlayer" parent="."]
bus = "SFX"

[connection signal="end_race" from="PauseMenu" to="." method="_end_race"]
[connection signal="timeout" from="StartTimer" to="." method="_start_race"]
[connection signal="timeout" from="EndTimer" to="." method="_end_race"]
